test/errhandling/inprogress/try-bang-temp.good
should not continue
try-bang-temp.chpl:3: error: uncaught error
